--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h4 class="center">Payment Processing</h4>
                     <br/>
                     <div class="col-lg-6">
-								<button class="btn btn-info" @click="supplierReview=false; addInvoice=false; payments=false; paymentsSummaryPage=true">
+								<button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=false; paymentsSummaryPage=true">
 								    Payments summary
 								</button>
 				            </div>
@@ -191,7 +191,7 @@
                 <h4 class="center">Payment Processing</h4>
                 <br>
                 <div class="col-lg-6">
-                    <button class="btn btn-info" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false">
+                    <button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false">
                         Back
                     </button>
                     <button class="btn btn-dark" @click="processPayments">
