--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <h4 class="center">Payment Processing</h4>
                 <br>
                 <div class="col-lg-6">
-                    <button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false">
+                    <button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false; confirmProcessPaymentsScreen=false">
                         Back
                     </button>
                     <button class="btn btn-dark" @click="confirmProcessPaymentsScreen = true; paymentsSummaryPage=false">
