--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        totalPaid as array: {{Object.entries(this.totalPaid)}}
+                        totalPaid as array: {{Object.entries(totalPaid)}}
                         Current total to pay: {{ grandTotalPaid }} GBP{{suppl}}
                         <br><br>
                         <div>
