--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         Back
                     </button>
                     <button class="btn btn-dark" v-if="Object.entries(totalPaid).length > 0" @click="confirmProcessPaymentsScreen = true; paymentsSummaryPage=false">
-						Process payments
+						Complete Process payments
 					</button>
 				</div>										    		
                 <div v-if="Object.entries(totalPaid).length > 0">
