--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
+                        totalPaid: {{totalPaid}}
                         totalPaid as array: {{Object.entries(totalPaid)}}
                         Current total to pay: {{ grandTotalPaid }} GBP{{suppl}}
                         <br><br>
