Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div>
-                        Total paid: GBP {{ grandTotalPaid }}
+                        Total paid: GBP {{ grandTotalPaid() }}
                     </div>
                 </div>
                 <div v-else>
