Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				    </button>
                     <div v-if="paymentProcessing">
                         totalPaid: {{totalPaid}}
-                        totalPaid as array: {{Object.entries(totalPaid)[1]}}
+                        totalPaid as array: {{Object.entries(totalPaid)}}
                         Current total to pay: {{ grandTotalPaid }} GBP{{suppl}}
                         <br><br>
                         <div>
