--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
                 <div v-if="Object.entries(totalPaid).length > 0">
                     <div class="row" v-for="(value,key) in Object.entries(totalPaid)">
                         <div class="col">
-                            {{ value[0] }} : GBP {{ value[1].toFixed(2) }}
+                            {{ value[0] }} : GBP {{ value[1]?.toFixed(2) }}
                         </div>
                     </div>
                     <div>
-                        Total paid: GBP {{ grandTotalPaid().toFixed(2) }}
+                        Total paid: GBP {{ grandTotalPaid()?.toFixed(2) }}
                     </div>
                 </div>
                 <div v-else>
