Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        totalPaid: {{totalPaid}}
+                       inv checked {{ vendorInvoices[suppl] }}
                         totalPaid as array: {{Object.entries(totalPaid)}}
                         Current total to pay: {{ grandTotalPaid }} GBP{{suppl}}
                         <br><br>
