Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        Checked: {{vendorInvoices[suppl]}}
-                        totalPaid as array: {{Object.entries(totalPaid)}}
+                        <!--Checked: {{vendorInvoices[suppl]}}
+                        totalPaid as array: {{Object.entries(totalPaid)}}-->
                         PAYMENTSSELECTED: {{paymentsSelected}}
                         Current total to pay: {{ grandTotalPaid }} GBP{{suppl}}
                         <br><br>
