--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </div>
                 </div>
                 <div v-else>
-                    No payments selected
+                    No payments selected{{totalPaid}}
                 </div>
             </div>
             <div v-if="confirmProcessPaymentsScreen">
