--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        PAYMENTSSELECTED: {{Object.entries(vendorInvoices)}}
+                        PAYMENTSSELECTED: {{Object.entries(vendorInvoices)}}{{selectedPayments}}
                         <br><br>
                         <div>
                             <div v-if="suppl && vendorInvoices[suppl]">
