--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                 </div>
                 <div v-else>
                     No payments selected{{totalPaid}}
+                    {{selectedPayments}}
                 </div>
             </div>
             <div v-if="confirmProcessPaymentsScreen">
