--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div v-else>
                     No payments selected{{totalPaid}}
-                    {{selectedPayments}}
+                    {{displaySelectedPayments}}
                 </div>
             </div>
             <div v-if="confirmProcessPaymentsScreen">
