Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div v-else>
                     No payments selected{{totalPaid}}
-                    {{displaySelectedPayments}}
+                    selected payments: {{displaySelectedPayments}}
                 </div>
             </div>
             <div v-if="confirmProcessPaymentsScreen">
