Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
                 <div v-else>
                     No payments selected{{totalPaid}}
                     selected payments: {{displaySelectedPayments}}
+                    {{allInvoices}}
                 </div>
             </div>
             <div v-if="confirmProcessPaymentsScreen">
