--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				        Supplier Review 
 				    </button>
                 </p>
-                <div v-if="vendorInvoices">
+                <div v-if="vendorInvoices.length > 0">
                     
                     <table class="table table-striped">
                         <thead>
@@ -154,7 +154,7 @@
                         VENDOR INVOICES: {{vendorInvoices?.filter(inv=>selectedPayments.includes(inv.id))}}AllInvoices:{{allInvoices}}{{selectedPayments}}
                         <br><br>
                         <div>
-                            <div v-if="suppl && vendorInvoices[suppl]">
+                            <div v-if="suppl && vendorInvoices.length > 0">
                                 <table>
                                     <tr>
                                         <th></th>
@@ -164,7 +164,7 @@
                                         <th class="px-4 text-right">Inv Amt</th>
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
-                                    <tr v-for="(invoice, index) in vendorInvoices[suppl]">
+                                    <tr v-for="(invoice, index) in vendorInvoices">
                                         <td class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id)"/></td>
                                         <td class="px-4">{{invoice.number}}</td>
                                         <td class="px-4">{{invoice.id}}</td>
@@ -174,7 +174,7 @@
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
-                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ paymentsSum(vendorInvoices[suppl])?.toFixed(2) }}</td>
+                                        <td class="px-4 text-right"></td><td class="px-4 text-right">{{ paymentsSum(vendorInvoices)?.toFixed(2) }}</td>
                                     </tr>
                                 </table>
                             </div>
