--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				        Process payments 
 				    </button>
                     <div v-if="paymentProcessing">
-                        VENDOR INVOICES: {{vendorInvoices?.filter(inv=>selectedPayments.includes(inv.id))}}AllInvoices:{{allInvoices}}{{selectedPayments}}
+                        <!--VENDOR INVOICES: {{vendorInvoices?.filter(inv=>selectedPayments.includes(inv.id))}}AllInvoices:{{allInvoices}}{{selectedPayments}}-->
                         <br><br>
                         <div>
                             <div v-if="vendorInvoices.length > 0">
