--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                     <button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false; confirmProcessPaymentsScreen=false">
                         Back
                     </button>
-                    <button class="btn btn-dark" v-if="Object.entries(totalPaid).length > 0" @click="confirmProcessPayments()">
+                    <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
 						Complete Process payments
 					</button>
 				</div>										    		
-                <div v-if="Object.entries(totalPaid).length > 0">
+                <div v-if="selectedPayments.length > 0">
                     <div class="row" v-for="(value,key) in Object.entries(vendorInvoices)">
                         <div class="col">
                             {{ value[0] }} : GBP {{ value[1]?.toFixed(2) }}
