--- a/index.html
+++ b/index.html
@@ -200,7 +200,11 @@
                     <div class="row"> 
                         <div class="col">
                              'Ulreco'  : GBP {{ currentSupplierSum('Ulreco')?.toFixed(2) }}
-                             'Acorn Systems Ltd' : GBP {{ currentSupplierSum('Acorn Systems Ltd')?.toFixed(2) }}
+                        </div>
+                    </div>
+                    <div class="row"> 
+                        <div class="col">
+                             'Acorn Systems Ltd'  : GBP {{ currentSupplierSum('Acorn Systems Ltd')?.toFixed(2) }}
                         </div>
                     </div>
                     <div>
