--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div v-if="selectedPayments.length > 0"><!--v-for="(value,key) in allInvoices.filter(inv=>inv.supplier='Ulreco')">-->
                     <div v-for="record in paymentsRecord" class="row"> 
                         <div class="col">
-                             GBP {{ record[supplier] }}{{record[sum]}}
+                             GBP {{ record }}
                         </div>
                     </div>
                     <div class="row"> 
