--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 					</button>
 				</div>										    		
                 <div v-if="selectedPayments.length > 0"><!--v-for="(value,key) in allInvoices.filter(inv=>inv.supplier='Ulreco')">-->
-                    <div v-for="record in paymentsRecord" class="row"> 
+                    <div v-for="(record, sum) in Object.values(paymentsRecord)" class="row"> 
                         <div class="col">
-                             GBP {{ record }}
+                             GBP {{ record[supplier] }}
                         </div>
                     </div>
                     <div class="row"> 
