--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
                     </div>
                     <div class="row"> 
                         <div class="col">
-                             'Ulreco'  : GBP {{ currentSupplierSum('Ulreco')?.toFixed(2) }}
+                             'Ulreco'  : GBP {{ currentSupplierSum('Ulreco') }}
                         </div>
                     </div>
                     <div class="row"> 
                         <div class="col">
-                             'Acorn Systems Ltd'  : GBP {{ currentSupplierSum('Acorn Systems Ltd')?.toFixed(2) }}
+                             'Acorn Systems Ltd'  : GBP {{ currentSupplierSum('Acorn Systems Ltd') }}
                         </div>
                     </div>
                     <div>
