Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					</button>
 				</div>										    		
                 <div v-if="selectedPayments.length > 0"><!--v-for="(value,key) in allInvoices.filter(inv=>inv.supplier='Ulreco')">-->
-                    <div v-for="(record) in Object.values(paymentsRecord)" class="row"> 
+                    <div v-for="(record) in Object.entries(paymentsRecord)" class="row"> 
                         <div class="col">
                               {{ record[supplier] }} GBP {{ record[sum]}}
                         </div>
