--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div v-else>
-                    No payments selected{{totalPaid}}
+                    No payments selected
                     
                 </div>
             </div>
