Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </div>
                    
                     <div class="fw-bold">
-                        Total paid: GBP {{ currentSupplierSum('Ulreco') + currentSupplierSum('Acorn Systems Ltd') }}
+                        Total paid: GBP {{ currentSupplierSum() }}
                     </div>
                 </div>
                 <div v-else>
