--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </div>
                    
                     <div class="fw-bold">
-                        Total paid: GBP {{ currentSupplierSum() }}
+                        Total paid: GBP {{ grandTotalPaid() }}
                     </div>
                 </div>
                 <div v-else>
