--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <button class="btn btn-info w-40" @click="supplierReview=false; addInvoice=false; payments=true; paymentsSummaryPage=false; confirmProcessPaymentsScreen=false">
                         Back
                     </button>
-                    <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
+                    <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPaymentsScreen=true">
 						Complete Process payments
 					</button>
 				</div>										    		
@@ -214,6 +214,9 @@
             <div v-if="confirmProcessPaymentsScreen">
                 Please confirm you wish to allocate the payments.
             </div>
+            <button class="btn btn-dark" v-if="selectedPayments.length > 0" @click="confirmProcessPayments()">
+						Confirm
+					</button>
         </div>
     </div>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
