Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                <td></td>
                                <td></td>
                                <td></td>
-                               <td class="text-end fw-bold">{{ reviewTotalSum(vendorInvoices).toFixed(2) }}</td>
+                               <td class="text-end fw-bold">{{ reviewTotalSum(vendorInvoicesArray).toFixed(2) }}</td>
                                <td class="text-end fw-bold">{{ reviewPaidSum(vendorInvoices).toFixed(2) }}</td>
                                <td class="text-end fw-bold">{{ reviewOutstandingSum(vendorInvoices).toFixed(2) }}</td>
                                <td class="text-end"></td>
