--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                                <td></td>
                                <td></td>
                                <td class="text-end fw-bold">{{ reviewTotalSum(vendorInvoicesArray).toFixed(2) }}</td>
-                               <td class="text-end fw-bold">{{ reviewPaidSum(vendorInvoices).toFixed(2) }}</td>
-                               <td class="text-end fw-bold">{{ reviewOutstandingSum(vendorInvoices).toFixed(2) }}</td>
+                               <td class="text-end fw-bold">{{ reviewPaidSum(vendorInvoicesArray).toFixed(2) }}</td>
+                               <td class="text-end fw-bold">{{ reviewOutstandingSum(vendorInvoicesArray).toFixed(2) }}</td>
                                <td class="text-end"></td>
                             </tr>
                         </tbody>
