--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                <td>{{invoice.description}}</td>
                                <td class="text-end">{{invoice.amount}}</td>
                                <td class="text-end">{{invoice.paid}}</td>
-                               <td class="text-end">{{invoice.paid}}</td>
+                               <td class="text-end">{{invoice.amount}}</td>
                                <td class="text-end"></td>
                             </tr>
                             <tr>
