--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="col red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div><label>Invoice Date:</label></div>
+                            <div><label>Invoice Date (yyyy/mm/dd):</label></div>
                             <div><input type="text" name="inv_date" v-model="invoiceDate"></div>
                             <div class="red-text"></div>
                         </div>
@@ -125,7 +125,7 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div><label>Invoice Amount:</label></div>
+                            <div><label>Invoice Amount (GBP):</label></div>
                             <div><input type="text" name="inv_amt" v-model="invoiceAmount"></div>
                             <div class="red-text"></div>
                         </div>
