--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div class="red-text"></div>
                         </div>
                         <div class="mb-3">
-                            <div><label>Office:</label></div>
+                            <div><label>Office (eg Birmingham, Cardiff etc):</label></div>
                             <div><input type="text" name="office" v-model="office"></div>
                             <div class="red-text"></div>
                         </div>
