--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
             </div>
             <div v-if="supplierReview">
-                <p class="text-center py-5">{{paid}}
+                <p class="text-center py-5">
                     <label>Supplier Name:</label>
                     <input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>
                     <button class="btn btn-info" @click="getSupplier()">
