--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
                                         <th class="px-4 text-right">Inv Amt</th>
                                         <th class="px-4 text-right">Paid</th>
                                     </tr>
-                                    <tr v-for="(invoice, index) in vendorInvoices">
-                                        <td class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id)"/></td>
-                                        <td class="px-4">{{invoice.number}}</td>
-                                        <td class="px-4">{{invoice.id}}</td>
-                                        <td class="px-4">{{invoice.date}}</td>
-                                        <td class="px-4 text-right">{{invoice.amount}}</td>
-                                        <td class="px-4 text-right">{{amountPaid(invoice.id)}}</td>
+                                    <tr v-for="(invoice, index) in vendorInvoicesArray">
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4"><input type="checkbox" v-model="checked[invoice.id]" @click="updatePayments(invoice.id)"/></td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.number}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.id}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4">{{invoice.date}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{invoice.amount}}</td>
+                                        <td v-if="invoice.paid < invoice.amount" class="px-4 text-right">{{invoice.paid}}</td>
                                     </tr>
                                     <tr>
                                         <td></td><td></td><td></td><td class="pl-4 text-right">Total</td>
