Modified dbq, ind

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
             <div v-if="payments">
                 <section>
-                    <h4 class="center">Payment Processing</h4>
+                    <h4 class="center underline">Payment Processing</h4>
                     <br/>
                     <div class="col-lg-6">
 								<button class="btn btn-info w-40" @click="showPaymentsSummary()">
@@ -180,7 +180,6 @@
                             </div>
                         </div>
                     </div>
-                        
                 </section>
             </div>
             <div v-if="paymentsSummaryPage">
